--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,14 @@
-asdf
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <link rel="node_modules\bootstrap\dist\css\bootstrap.min.css" href="/css/master.css">
+    <script src="node_modules\jquery\dist\jquery.min.js" charset="utf-8"></script>
+    <script src="node_modules\bootstrap\dist\js\bootstrap.min.js" charset="utf-8"></script>
+    <script src="JS\Index.js" charset="utf-8"></script>
+    <title></title>
+  </head>
+  <body>
+
+  </body>
+</html>
