--- a/Index.html
+++ b/Index.html
@@ -2,13 +2,23 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="node_modules\bootstrap\dist\css\bootstrap.min.css" href="/css/master.css">
+    <link rel="stylesheet" href="node_modules\bootstrap\dist\css\bootstrap.min.css">
+    <link rel="stylesheet" href="Styles\Index.css">
     <script src="node_modules\jquery\dist\jquery.min.js" charset="utf-8"></script>
     <script src="node_modules\bootstrap\dist\js\bootstrap.min.js" charset="utf-8"></script>
     <script src="JS\Index.js" charset="utf-8"></script>
     <title></title>
   </head>
   <body>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-sm-3" id="left-panel">
 
+        </div>
+        <div class="col-sm-9" id="right-panel">
+          
+        </div>
+      </div>
+    </div>
   </body>
 </html>
