--- a/Index.html
+++ b/Index.html
@@ -3,9 +3,13 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="node_modules\bootstrap\dist\css\bootstrap.min.css">
+    <link rel="stylesheet" href="http://kendo.cdn.telerik.com/2017.1.118/styles/kendo.common.min.css">
+    <link rel="stylesheet" href="http://kendo.cdn.telerik.com/2017.1.118/styles/kendo.rtl.min.css">
+    <link rel="stylesheet" href="http://kendo.cdn.telerik.com/2017.1.118/styles/kendo.metro.min.css">
     <link rel="stylesheet" href="Styles\Index.css">
     <script src="node_modules\jquery\dist\jquery.min.js" charset="utf-8"></script>
     <script src="node_modules\bootstrap\dist\js\bootstrap.min.js" charset="utf-8"></script>
+    <script src="http://kendo.cdn.telerik.com/2017.1.118/js/kendo.all.min.js"></script>
     <script src="JS\MockData.js" charset="utf-8"></script>
     <script src="JS\Index.js" charset="utf-8"></script>
     <title></title>
@@ -14,11 +18,19 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-sm-3" id="left-panel">
-          <div class="btn-group">
+          <!-- <div class="btn-group">
             <button id="site-selector-btn" type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               <span id="site-name-display">Choose your site</span> <span class="caret"></span>
             </button>
             <ul class="dropdown-menu" id="site-selector"></ul>
+          </div> -->
+          <div class="demo-section k-content">
+            <h4>Sites</h4>
+            <input id="sites" style="width: 100%;" />
+            <hr>
+            <h4>Start / Finish time</h4>
+            <input id="startTime" style="width: 45%;" />
+            <input id="finishTime" style="width: 45%;" />
           </div>
         </div>
         <div class="col-sm-9" id="right-panel">
